--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "eslint .",
     "test": "istanbul test -- _mocha",
     "coverage": "npm test --coverage && istanbul check-coverage --statement 100 --branch 100 --function 100",
-    "precommit": "npm run lint && npm run coverage"
+    "precommit": "npm run lint && npm run coverage",
+    "coveralls": "npm run coverage && istanbul-coveralls"
   },
   "keywords": [
     "rabbitmq",
@@ -26,6 +27,7 @@
     "backoff": "^2.4.1",
     "debug": "^2.2.0",
     "husky": "^0.10.1",
+    "istanbul-coveralls": "^1.0.3",
     "lodash.clonedeep": "^3.0.2",
     "lodash.defaults": "^3.1.2",
     "lodash.map": "^3.1.4",
