--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "precommit": "npm run lint && npm run coverage",
     "coveralls": "npm run coverage && istanbul-coveralls"
   },
+  "contributors": [
+    { "name": "Csaba Palfi", "url": "https://github.com/csabapalfi" },
+    { "name": "Pedro Teixeira", "url": "https://github.com/pgte" },
+    { "name": "Frederik Brysse", "url": "https://github.com/frederik256" },
+    { "name": "Hassy Veldstra", "url": "https://github.com/hassy" },
+    { "name": "João Jerónimo", "url": "https://github.com/joaojeronimo" }
+  ],
   "keywords": [
     "rabbitmq",
     "warren",
