--- a/package.json
+++ b/package.json
@@ -45,32 +45,32 @@
     "url": "https://github.com/trainline/rabbitmq-warren-node"
   },
   "dependencies": {
-    "async": "^1.5.0",
-    "backoff": "^2.4.1",
-    "debug": "^2.2.0",
-    "husky": "^0.10.1",
-    "istanbul-coveralls": "^1.0.3",
-    "lodash.clonedeep": "^3.0.2",
-    "lodash.defaults": "^3.1.2",
-    "lodash.map": "^3.1.4",
-    "lodash.once": "^3.0.1",
-    "lodash.shuffle": "^3.1.0",
-    "rascal": "^0.10.0"
+    "async": "1.5.2",
+    "backoff": "2.4.1",
+    "debug": "2.2.0",
+    "lodash.clonedeep": "4.0.3",
+    "lodash.defaults": "4.0.1",
+    "lodash.map": "4.2.1",
+    "lodash.once": "4.0.0",
+    "lodash.shuffle": "4.0.0",
+    "rascal": "0.10.2"
   },
   "devDependencies": {
-    "code": "1.4.1",
-    "eslint": "^1.9.0",
-    "eslint-config-airbnb": "^1.0.0",
-    "istanbul": "^0.3.20",
-    "lodash.clone": "^3.0.3",
-    "lodash.foreach": "^3.0.3",
-    "lodash.get": "^3.7.0",
-    "lodash.isequal": "^3.0.4",
-    "lodash.merge": "^3.3.2",
-    "lodash.omit": "^3.1.0",
-    "lodash.times": "^3.0.3",
-    "mocha": "^2.3.4",
-    "proxyquire": "^1.7.2"
+    "code": "2.1.0",
+    "eslint": "1.9.0",
+    "eslint-config-airbnb": "1.0.0",
+    "husky": "0.11.3",
+    "istanbul": "0.4.2",
+    "istanbul-coveralls": "1.0.3",
+    "lodash.clone": "4.3.1",
+    "lodash.foreach": "4.1.0",
+    "lodash.get": "4.1.2",
+    "lodash.isequal": "4.1.1",
+    "lodash.merge": "4.3.2",
+    "lodash.omit": "4.1.0",
+    "lodash.times": "4.0.2",
+    "mocha": "2.4.5",
+    "proxyquire": "1.7.4"
   },
   "engines": {
     "node": ">=4.2.0"
